# stele

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  claude.md  pyproject.toml  railway.etl.json  railway.json  survey-engine-design-doc.md  survey-engine-for-researcher.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/postgres-init/: 01-roles.sql  01-schemas-and-roles.sql  02-schemas-and-grants.sql
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  claude-review.yml  codeql.yml
api/: __init__.py  alembic.ini  credential_worker.py  db.py  main.py  pyproject.toml
api/admin/: __init__.py  users_router.py
api/alembic/: env.py
api/alembic/versions/: 953cf853cada_initial_app_tables_survey_definitions_.py  a1b2c3d4e5f6_etl_runs_dbt_results.py  a5b6c7d8e9f0_etl_app_least_privilege.py  b2c3d4e5f6a7_survey_short_codes.py  b6c7d8e9f0a1_db_credential_grants.py  c1d2e3f4a5b6_raw_responses_definition_snapshot.py  c3d4e5f6a7b8_pii_free_text_scrubs.py  c4d5e6f7a8b9_app_provision_requests.py  c7d8e9f0a1b2_pii_free_text_review_decisions.py  d2e3f4a5b6c7_pii_free_text_responses.py  d5e6f7a8b9c0_app_secret_deliveries.py  d8e9f0a1b2c3_survey_for_real_respondents_flag.py  e3f4a5b6c7d8_pii_withdrawals.py  e6f7a8b9c0d1_app_role_analyst.py  e9f0a1b2c3d4_pii_free_text_occurrence.py  f0a1b2c3d4e5_ops_etl_runs.py  f1a2b3c4d5e6_app_user_roles.py  f4a5b6c7d8e9_app_users_and_sessions.py  fa3b82f432f9_read_model_tables_responses_response_.py
api/auth/: __init__.py  config.py  deps.py  hash.py  me_router.py  models.py  provisioning.py  provisioning_router.py  router.py  schemas.py  secret_delivery.py  service.py
api/etl/: __init__.py  admin_router.py  admin_service.py  runner.py
api/survey_engine/: export.py  gdpr_router.py  models.py  pii_review_router.py  respondents_router.py  round_trip.py  router.py  schemas.py  service.py  validation.py
api/tests/: conftest.py  test_admin_users.py  test_app_composition.py  test_auth.py  test_bootstrap_roles.py  test_credential_worker.py  test_db.py  test_db_access_admin.py  test_db_credentials.py  test_docker_entrypoint.py  test_etl_admin.py  test_gdpr.py  test_me_credentials.py  test_patterns.py  test_pii_review.py  test_pii_scrub.py  test_provision_cli.py  test_publish_gate.py  test_rbac.py  test_read_model.py  test_responses.py  test_rotate_role_password.py  test_round_trip.py  test_run_etl.py  test_secret_delivery.py  test_short_codes.py  test_smoke.py  test_survey_export.py  test_surveys.py  test_withdrawal.py
dbt/: dbt_project.yml  profiles.yml
dbt/analyses/: single_select_counts.sql
dbt/macros/: generate_schema_name.sql  matrix.sql  postgres__create_schema.sql  surrogate_key.sql
dbt/models/: sources.yml
docs/: roadmap.md
docs/design/: README.md
docs/verification/: d7-prebuilt-image.md  m1-slice.md  m2-pii-slice.md  m3-manual-test-plan.md  m3.4-gdpr-pii-console.md  m3.5-db-credentials.md  m4-publish-gate.md  m5-question-types.md  m6-etl.md  m7.2-dockerfile.md  m7.4-railway.md  m7.5-etl-cron.md  m7.6-demo-to-prod.md  m8-ui.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/scripts/: roundTrip.mjs  roundTrip.test.mjs
frontend/src/: App.test.tsx  App.tsx  RespondentEntry.test.tsx  RespondentEntry.tsx  RespondentLayout.test.tsx  RespondentLayout.tsx  ShortCodeEntry.test.tsx  ShortCodeEntry.tsx  SurveyRunner.test.tsx  SurveyRunner.tsx  api.test.ts  api.ts  format.test.ts  format.ts  index.css  main.ts  main.tsx  surveyInit.test.ts  surveyInit.ts  test-setup.ts
infra/: README.md
infra/railway/: .env.example  .terraform.lock.hcl  (+5 more)
patterns/: README.md  branching.json  calculated_values.json  free_text_pii.json  matrix.json  matrixdropdown.json  multi_page.json  multi_select.json  randomization.json  ranked.json  repeating_group.json  scalar.json  single_select.json
scripts/: bootstrap_admin.py  bootstrap_roles.py  check_invariants.py  docker-entrypoint.sh  init-repo.sh  provision_db_credential.py  rotate_role_password.py  run_etl.py  seed_example_survey.py
(+71 files in other folders)
