[project]
name = "stele"
version = "0.0.1"
description = "Survey engine and data warehouse"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "pyyaml>=6",  # api/etl/runner.py parses dbt's sources.yml directly
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6",  # stubs for the runner's sources.yml parse (api/etl/runner.py)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Sensible starting set. Tune as you get a feel for the codebase.
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "S",                # bandit (security)
    "PT",               # pytest style
]
ignore = [
    "E501",  # line length — formatter handles it
    "S101",  # `assert` is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"api/tests/**" = ["S"]      # security checks too noisy in tests
"scripts/**" = ["S"]        # the invariant linter reads/parses repo files by design
"api/survey_engine/models.py" = ["RUF012"]  # SQLAlchemy __table_args__ is not a mutable-default footgun
"api/auth/models.py" = ["RUF012"]           # same: SQLAlchemy __table_args__

[tool.mypy]
python_version = "3.12"
strict = true
# Soften gradually as you adopt; remove `ignore_missing_imports` once stubs exist.
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["api/tests"]
